# SimpleCutPy

./: .gitignore  DataUtils.py  MyCustomCtrl.py  PureClip.py  PureClipFBP.fbp  PureClipMainFrame.py  SimpleCutMainFrame.py  SimpleCutPy.fbp  SimpleCutPy.py  SimpleCutPy.spec  backup.py  command.py  main.py  main.spec  pyproject.toml  readme.md
.github/workflows/: build-and-release.yml
scripts/: build.py
src/: SimpleCutMainFrame.py  SimpleCutPy.fbp  SimpleCutPy.py  command.py  main.py  message.py  model.py
src/controller/: core.py
src/export/: __init__.py  core.py  filter_builder.py  model.py
src/tools/: path.py  version.py
